--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,7 @@ Assets/map/model/A2.fbx
 Assets/map/model/A2.fbx.meta
 Assets/map/model/A1_1.fbx
 Assets/map/model/A1_1.fbx.meta
+/Assets/01. 작업
+Assets/01. 작업.meta
+/Assets/01. 작업
+/Assets/01. 작업
